--- a/about.html
+++ b/about.html
@@ -316,7 +316,7 @@
                             <div class='footer-widget about-widget'>
                                 <div class='widget-inner'>
                                     <div class='logo'><img src='images/logo2.png' alt=''></div>
-                                    <div class='text'>Nulla ac nunc eget ante consectetur lobortis a vel orci. Vivamus nibh est condimentum ac metus nec, gravida varius diam.</div>
+                                    <div class='text'>SAH – A MELHOR ESCOLHA PARA O SEU NEGÓCIO.</div>
                                     <div class='social-links'>
                                         <ul class='clearfix'>
                                             <li><a href='#'><span class='fa fa-facebook-f'></span></a></li>
