--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     </li>
 
                     <li data-description="Slide Description" data-easein="default" data-easeout="default" data-fsmasterspeed="1500" data-fsslotamount="7" data-fstransition="fade" data-hideafterloop="0" data-hideslideonmobile="off" data-index="rs-1688" data-masterspeed="default" data-param1="" data-param10="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-rotate="0" data-saveperformance="off" data-slotamount="default" data-thumb="images/main-slider/image-2.jpg" data-title="Slide Title" data-transition="parallaxvertical">
-                        <img alt="" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="images/main-slider/image-3.jpg">
+                        <img alt="" class="rev-slidebg" data-bgfit="cover" data-bgparallax="10" data-bgposition="center center" data-bgrepeat="no-repeat" data-no-retina="" src="images/main-slider/10.jpg">
 
                         <div class="tp-caption tp-resizeme"
                              data-paddingbottom="[0,0,0,0]"
@@ -380,7 +380,7 @@
                                 <div class='footer-widget about-widget'>
                                     <div class='widget-inner'>
                                         <div class='logo'><img src='images/logo2.png' alt=''></div>
-                                        <div class='text'>Nulla ac nunc eget ante consectetur lobortis a vel orci. Vivamus nibh est condimentum ac metus nec, gravida varius diam.</div>
+                                        <div class='text'>SAH – A MELHOR ESCOLHA PARA O SEU NEGÓCIO.</div>
                                         <div class='social-links'>
                                             <ul class='clearfix'>
                                                 <li><a href='#'><span class='fa fa-facebook-f'></span></a></li>
