--- a/blog-detail.html
+++ b/blog-detail.html
@@ -40,7 +40,7 @@
                 <div class="clearfix">
 
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img src="images/logo2.png" alt="" title=""></a></div>
+                        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
                     </div>
 
                     <div class="nav-outer clearfix">
@@ -62,6 +62,8 @@
                                     <li><a href="about.html">Quem somos</a>
                                     </li>
                                     <li><a href="services.html">Serviços</a>
+                                    </li>
+                                    <li><a href="partners.html">Parceiros</a>
                                     </li>
                                     <li class="current"><a href="blog-list.html">Blog</a>
                                     </li>
@@ -171,13 +173,13 @@
                             <div class='footer-column col-md-5 col-sm-6 col-xs-12'>
                                 <div class='footer-widget about-widget'>
                                     <div class='widget-inner'>
-                                        <div class='logo'><img src='images/logo2.png' alt=''></div>
+                                        <div class='logo'><img src='images/logo.png' alt=''></div>
                                         <div class='text'>SAH – A MELHOR ESCOLHA PARA O SEU NEGÓCIO.</div>
                                         <div class='social-links'>
                                             <ul class='clearfix'>
-                                                <li><a href='#'><span class='fa fa-facebook-f'></span></a></li>
-                                                <li><a href='#'><span class='fa fa-instagram'></span></a></li>
-                                                <li><a href='#'><span class='fa fa-linkedin'></span></a></li>
+                                                <li><a href='https://www.facebook.com/SAH-Cont%C3%A1bil-467756793291666' target="_blank"><span class='fa fa-facebook-f'></span></a></li>
+                                                <li><a href='https://www.instagram.com/sahcontabil/' target="_blank"><span class='fa fa-instagram'></span></a></li>
+                                                <li><a href='https://www.linkedin.com/company/sahcontabil-smart-accounting-help/' target="_blank"><span class='fa fa-linkedin'></span></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -213,7 +215,7 @@
                                                 </li>
                                                 <li>
                                                     <i class="fa fa-phone" style="color: #8A288F; padding-right: 10px;"></i>
-                                                    <span>(11) 3274-6300 / (11) 94295-6580 <i class="fa fa-whatsapp" style="color:#1DAA4B;"></i></span>
+                                                    <span>(11) 3274-6300 / <a href="https://web.whatsapp.com/send?phone=5511942956580&amp;text=Olá, acessei o site da SAH CONTÁBIL e gostaria de outras informações." target="_blank" style="color:#000000"/>(11) 94295-6580 <i class="fa fa-whatsapp" style="color:#34af23;"></i></a></span>
                                                 </li>
                                                 <li>
                                                     <i class="fa fa-envelope-o" style="color: #8A288F; padding-right: 10px;"></i>
