--- a/blog-inss.html
+++ b/blog-inss.html
@@ -40,7 +40,7 @@
                 <div class="clearfix">
 
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img src="images/logo2.png" alt="" title=""></a></div>
+                        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
                     </div>
 
                     <div class="nav-outer clearfix">
@@ -171,7 +171,7 @@
                             <div class='footer-column col-md-5 col-sm-6 col-xs-12'>
                                 <div class='footer-widget about-widget'>
                                     <div class='widget-inner'>
-                                        <div class='logo'><img src='images/logo2.png' alt=''></div>
+                                        <div class='logo'><img src='images/logo.png' alt=''></div>
                                         <div class='text'>Nulla ac nunc eget ante consectetur lobortis a vel orci. Vivamus nibh est condimentum ac metus nec, gravida varius diam.</div>
                                         <div class='social-links'>
                                             <ul class='clearfix'>
