--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="top-left clearfix">
                     <ul class="info clearfix">
                         <li><a href="#"><span class="icon fa fa-phone" style="font-size:26px"></span>(11) 3274-6300</a></li>
-                        <li><a href="#"><span class="icon fa fa-whatsapp" ></span>(11) 94295-6580</a></li>
+                        <li><a href="https://web.whatsapp.com/send?phone=5511942956580&amp;text=Olá, acessei o site da SAH CONTÁBIL e gostaria de outras informações." alt="Clique aqui para conversamos no Whatsapp"><span class="icon fa fa-whatsapp" ></span>(11) 94295-6580</a></li>
                         <li><a href="#"><span class="icon flaticon-e-mail-envelope"></span> contato@sahcontabil.com.br</a></li>
                         <li><a href="#"><span class="icon flaticon-placeholder-2"></span> Seg - Sex 8:00 às 17:45</a></li>
                     </ul>
@@ -57,7 +57,7 @@
                 <div class="clearfix">
 
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img src="images/logo2.png" alt="" title=""></a></div>
+                        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
                     </div>
 
                     <div class="nav-outer clearfix">
@@ -79,6 +79,8 @@
                                     <li><a href="about.html">Quem somos</a>
                                     </li>
                                     <li><a href="services.html">Serviços</a>
+                                    </li>
+                                    <li><a href="partners.html">Parceiros</a>
                                     </li>
                                     <li><a href="blog-list.html">Blog</a></li>
 
@@ -134,7 +136,7 @@
                              data-y="['middle','middle','middle','middle']"
                              data-textalign="['top','top','top','top']"
                              data-frames='[{"from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
-                            <div class="text-center"><h1>Contabilidade Médica</h1></div>
+                            <div class="text-center"><h1>CONTABILIDADE MÉDICA ESPECIALIZADA</h1></div>
                         </div>
 
                         <div class="tp-caption tp-resizeme"
@@ -196,7 +198,7 @@
                              data-y="['middle','middle','middle','middle']"
                              data-textalign="['top','top','top','top']"
                              data-frames='[{"from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'>
-                            <div class="text-center"><h3>CONTABILIDADE MÉDICA ESPECIALIZADA</h3></div>
+                            <div class="text-center"><h1>CONTABILIDADE MÉDICA ESPECIALIZADA</h1></div>
                         </div>
 
                         <div class="tp-caption tp-resizeme"
@@ -264,11 +266,11 @@
                     <div class="inner">
                         <!--Heading-->
                         <div class="sec-title-two">
-                            <h1>Por que a SAH CONTABIL é diferente de todos os escritórios de contabilidade que você já viu?</h1>
+                            <h1>Por que a SAH CONTÁBIL é diferente de todos os escritórios de contabilidade que você já viu?</h1>
                         </div>
                         <div class="text">
                             <h3><p><b>Tecnologia</b></p></h3>
-                            <p><i>Com um forte apelo tecnológico, a SAH CONTABIL oferece aos seus clientes soluções contábeis modernas e, ao mesmo tempo, simples e eficientes.</i></p>
+                            <p><i>Com um forte apelo tecnológico, a SAH CONTÁBIL oferece aos seus clientes soluções contábeis modernas, simples e eficientes.</i></p>
                         </div>
                         <div class="text">
                             <h3><p><b>Equipe</b></p></h3>
@@ -276,7 +278,7 @@
                         </div>
                         <div class="text">
                             <h3><p><b>Atendimento</b></p></h3>
-                            <p><i>Somos um escritório de contabilidade consultivo e estamos presentes no dia-a-dia dos nossos clientes buscando sempre exceder as expectativas.</i></p>
+                            <p><i>Estamos presentes no dia-a-dia dos nossos clientes buscando sempre exceder as expectativas. Atendimento via WhatsApp , e-mail, telefone, Zoom, Teams, entre outras plataformas de videoconferência em grupo.</i></p>
                         </div>
                         <div class="link-box"><a href="about.html" class="theme-btn btn-style-two">CONHEÇA NOSSOS DIFERENCIAIS</a></div>
                     </div>
@@ -379,13 +381,13 @@
                             <div class='footer-column col-md-5 col-sm-6 col-xs-12'>
                                 <div class='footer-widget about-widget'>
                                     <div class='widget-inner'>
-                                        <div class='logo'><img src='images/logo2.png' alt=''></div>
+                                        <div class='logo'><img src='images/logo.png' alt=''></div>
                                         <div class='text'>SAH – A MELHOR ESCOLHA PARA O SEU NEGÓCIO.</div>
                                         <div class='social-links'>
                                             <ul class='clearfix'>
-                                                <li><a href='#'><span class='fa fa-facebook-f'></span></a></li>
-                                                <li><a href='#'><span class='fa fa-instagram'></span></a></li>
-                                                <li><a href='#'><span class='fa fa-linkedin'></span></a></li>
+                                                <li><a href='https://www.facebook.com/SAH-Cont%C3%A1bil-467756793291666' target="_blank"><span class='fa fa-facebook-f'></span></a></li>
+                                                <li><a href='https://www.instagram.com/sahcontabil/' target="_blank"><span class='fa fa-instagram'></span></a></li>
+                                                <li><a href='https://www.linkedin.com/company/sahcontabil-smart-accounting-help/' target="_blank"><span class='fa fa-linkedin'></span></a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -421,7 +423,7 @@
                                                 </li>
                                                 <li>
                                                     <i class="fa fa-phone" style="color: #8A288F; padding-right: 10px;"></i>
-                                                    <span>(11) 3274-6300 / (11) 94295-6580 <i class="fa fa-whatsapp" style="color:#34af23;"></i></span>
+                                                    <span>(11) 3274-6300 / <a href="https://web.whatsapp.com/send?phone=5511942956580&amp;text=Olá, acessei o site da SAH CONTÁBIL e gostaria de outras informações." target="_blank" style="color:#000000"/>(11) 94295-6580 <i class="fa fa-whatsapp" style="color:#34af23;"></i></a></span>
                                                 </li>
                                                 <li>
                                                     <i class="fa fa-envelope-o" style="color: #8A288F; padding-right: 10px;"></i>
@@ -442,7 +444,7 @@
             <div class="auto-container">
                 <div class="row clearfix">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="copyright centered">SAH CONTABIL &copy; - 2021 Todos os direitos reservados.</a></div>
+                        <div class="copyright centered">SAH CONTÁBIL &copy; - 2021 Todos os direitos reservados.</a></div>
                     </div>
 
                 </div>
@@ -457,7 +459,24 @@
 <!--End pagewrapper-->
 
 <!--Scroll to top-->
-<div class="scroll-to-top scroll-to-target" data-target="html"><span class="icon fa fa-angle-double-up"></span></div>
+<div class="scroll-to-top2">
+    <!-- GetButton.io widget -->
+    <script type="text/javascript">
+        (function () {
+            var options = {
+                whatsapp: "5511942956580", // WhatsApp number
+                call_to_action: "Olá, em que podemos ajudar? Envia-nos uma mensagem", // Call to action
+                position: "right", // Position may be 'right' or 'left'
+                pre_filled_message: "Olá gostaria de outras informações", // WhatsApp pre-filled message
+            };
+            var proto = document.location.protocol, host = "getbutton.io", url = proto + "//static." + host;
+            var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+            s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+            var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+        })();
+    </script>
+    <!-- /GetButton.io widget -->
+</div>
 
 
 
