--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 <div class="clearfix">
 
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img src="images/logo2.png" alt="" title=""></a></div>
+                        <div class="logo"><a href="index.html"><img src="images/logo.png" alt="" title=""></a></div>
                     </div>
 
                     <div class="nav-outer clearfix">
@@ -62,6 +62,8 @@
                                     <li class="current"><a href="about.html">Quem somos</a>
                                     </li>
                                     <li><a href="services.html">Serviços</a>
+                                    </li>
+                                    <li><a href="partners.html">Parceiros</a>
                                     </li>
                                     <li><a href="blog-list.html">Blog</a></li>
 
@@ -126,8 +128,9 @@
                             <p>Em 2014, como parte do planejamento estratégico da organização, a SAH passa a ser chamada de SAH – Smart Accounting Help, que representa o posicionamento da organização: ser o escritório contábil que oferece soluções inteligentes a seus clientes, facilitando suas vidas.</p>
                             <h4><b>Curiosidades:</b></h4>
                             <br>
-                            <p>15 anos antes de se tornar sócia na SAH, Andréia trabalhou com a Hemiko em seu primeiro emprego num escritório de contabilidade. O mundo dá voltas!</p>
-                            <p>A SAH conta em seu quadro de colaboradores profissionais que foram capacitados pelo Silveira no período em que trabalhou como voluntário na Fundação Sérgio Contente.</p>
+                            <p>Andréia trabalhou com a Hemiko 15 anos antes de se tornar sócia na SAH, em seu primeiro emprego em contabilidade. O mundo dá voltas!</p>
+
+                                <p>Silveira trabalhou como voluntário na Fundação Sérgio Contente, que capacita iniciantes na área contábil.</p>
                             <div class="tabs-box faq-tabs">
                                 <ul class="tab-buttons clearfix">
                                     <li class="tab-btn" data-tab="#tab-one">Nossa missão</li>
@@ -315,13 +318,13 @@
                         <div class='footer-column col-md-5 col-sm-6 col-xs-12'>
                             <div class='footer-widget about-widget'>
                                 <div class='widget-inner'>
-                                    <div class='logo'><img src='images/logo2.png' alt=''></div>
+                                    <div class='logo'><img src='images/logo.png' alt=''></div>
                                     <div class='text'>SAH – A MELHOR ESCOLHA PARA O SEU NEGÓCIO.</div>
                                     <div class='social-links'>
                                         <ul class='clearfix'>
-                                            <li><a href='#'><span class='fa fa-facebook-f'></span></a></li>
-                                            <li><a href='#'><span class='fa fa-instagram'></span></a></li>
-                                            <li><a href='#'><span class='fa fa-linkedin'></span></a></li>
+                                            <li><a href='https://www.facebook.com/SAH-Cont%C3%A1bil-467756793291666' target="_blank"><span class='fa fa-facebook-f'></span></a></li>
+                                            <li><a href='https://www.instagram.com/sahcontabil/' target="_blank"><span class='fa fa-instagram'></span></a></li>
+                                            <li><a href='https://www.linkedin.com/company/sahcontabil-smart-accounting-help/' target="_blank"><span class='fa fa-linkedin'></span></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -357,7 +360,7 @@
                                             </li>
                                             <li>
                                                 <i class="fa fa-phone" style="color: #8A288F; padding-right: 10px;"></i>
-                                                <span>(11) 3274-6300 / (11) 94295-6580 <i class="fa fa-whatsapp" style="color:#1DAA4B;"></i></span>
+                                                <span>(11) 3274-6300 / <a href="https://web.whatsapp.com/send?phone=5511942956580&amp;text=Olá, acessei o site da SAH CONTÁBIL e gostaria de outras informações." target="_blank" style="color:#000000"/>(11) 94295-6580 <i class="fa fa-whatsapp" style="color:#34af23;"></i></a></span>
                                             </li>
                                             <li>
                                                 <i class="fa fa-envelope-o" style="color: #8A288F; padding-right: 10px;"></i>
