--- a/about.html
+++ b/about.html
@@ -131,6 +131,10 @@
                             <p>Andréia trabalhou com a Hemiko 15 anos antes de se tornar sócia na SAH, em seu primeiro emprego em contabilidade. O mundo dá voltas!</p>
 
                                 <p>Silveira trabalhou como voluntário na Fundação Sérgio Contente, que capacita iniciantes na área contábil.</p>
+
+                            <h4><b>Comprometimento:</b></h4>
+
+                            <p>Somos comprometidos com resultados baseados na legislação vigente, com rapidez e transparência.</p>
                             <div class="tabs-box faq-tabs">
                                 <ul class="tab-buttons clearfix">
                                     <li class="tab-btn" data-tab="#tab-one">Nossa missão</li>
@@ -220,8 +224,8 @@
                 </div>
             </div>
         </div>
-</div>
 </section>
+
 
 
 <!--Team Section-->
